<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App Name -->
    <string name="app_name">Food App</string>

    <!-- Login Screen Strings -->
    <string name="welcome_back">Welcome Back</string>
    <string name="Signup"> Sign Up</string>
    <string name="login_subtitle">Login to continue ordering food</string>
    <string name="signup_subtitle">Signup to continue ordering food</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="have_account"> Have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Login</string>

    <!-- Content Descriptions (Accessibility) -->
    <string name="app_logo">App Logo</string>
    <string name="decorative_pizza">Decorative Pizza Icon</string>
    <string name="decorative_burger">Decorative Burger Icon</string>

    <!--    profile activity-->

    <string name="profile_my_orders">My Orders</string>
    <string name="profile_payment_methods">Payment Methods</string>
    <string name="profile_delivery_address">Delivery Address</string>
    <string name="profile_settings">Settings</string>

</resources>
